Chapter 10 - Labs/default-http-backend.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: default-http-backend
  name: default-http-backend
  namespace: kubernetes-dashboard
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:e
    k8s-app: default-http-backend

---

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: default-http-backend
  name: default-http-backend
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: default-http-backend
  template:
    metadata:
      labels:
        k8s-app: default-http-backend
    spec:
      containers:
        - name: kubernetes-dashboard
          image: nginx:stable-alpine3.17
          ports:
            - containerPort: 80
